appId: host.exp.exponent
---
# Assumimos que estamos na lista com a licença editada/criada
- assertVisible: "Projeto E2E Maestro"

# Desliza a licença para a esquerda para revelar os botões de ação
- swipe:
    direction: LEFT
    element: "Projeto E2E Maestro"

# Clica no botão de Excluir do swipe
- tapOn: "Excluir"

# O aplicativo mostra um alerta nativo do sistema ("Excluir", "Tem certeza?")
# Clicamos em "Excluir" no alerta nativo
- tapOn: "Excluir"

# Confirma que a licença foi removida e não é mais exibida
- assertNotVisible: "Projeto E2E Maestro"
